--- a/src/index.jade
+++ b/src/index.jade
@@ -5,6 +5,7 @@ html(lang="en", ng-app="DemoApp")
 		link(rel="stylesheet", href="timepickr.css")
 		
 	body.container
+		|<a href="https://github.com/thomporter/angular-timepickr"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 		h1 Angular Timepickr
 		p Inspired by 
 			a(href="http://haineault.com/media/jquery/ui-timepickr/page/") http://haineault.com/media/jquery/ui-timepickr/page/
@@ -17,7 +18,7 @@ html(lang="en", ng-app="DemoApp")
 			li Embeded on page - no "mouse over" features (yet)
 			li Only tested in Chrome
 		
-		h2 Demo
+		h2 Demo 1
 		p Bound directly to scope property ($scope.test_time)
 		div(ng-controller="DemoCtrl")
 			input(ng-model="test_time")
